# wireframe

./: CMakeLists.txt
src/: CMakeLists.txt  application.cpp  application.h  buffer.cpp  buffer.h  camera.cpp  camera.h  color.cpp  color.h  display.cpp  display.h  geometry.cpp  geometry.h  main.cpp  poly.cpp  poly.h  scene.cpp  scene.h  ships.h  sphere.h  timer.cpp  timer.h
